--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>One million lines</title>
+    <title>Trypstr</title>
 
     <!-- google arvo font and font-awesome-->
     <link href='https://fonts.googleapis.com/css?family=Arvo' rel='stylesheet' type='text/css'>
@@ -52,13 +52,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#jumbotron">ONE_MILLION LINES</a>
+          <a class="navbar-brand" href="#jumbotron">TRYPSTR</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
             
-            <li ><a href="#who"> who we are</a></li>
-            <li ><a href="#get-involved">Get involved </a></li>
+            <li ><a href="#who"> About app</a></li>
+            <li ><a href="#get-involved"> Sign up </a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -68,12 +68,14 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div id="jumbotron" class="jumbotron">
       <div class="container">
-         <h1>Our goal is to inspire 
-Zaporizhia to write 1,000,000
-lines of english_</h1>
-        <p>All over the country people are taking the HOUR OF ENGLISH challenge. Millions of lines of english are being written. In the cossacks city of Ukraine, Zaporizhia, the community is taking the challenge and our goal is to write 1,000,000 lines of english</p>
-        <p><a class="btn btn-danger btn-lg" href="#who" role="button">Learn more &raquo;</a></p>
-         <div><i class="large material-icons">language</i></div>
+         <h1>Our goal is to inspire you to take stunning photos of your current 
+           location and help others see those photos
+         </h1>
+        <p>All over the world people are having amazing trips. Millions of photos are being taken. With 
+          all these beautiful sights and sounds, our plan is to see those
+          photos get to 1 Trillion </p>
+        <p><a class="btn btn-danger btn-lg" href="#who" role="button">Sign up &raquo;</a></p>
+         <div><i class="large material-icons"> TRYPSTR</i></div>
       </div>
     </div>
     
