add trypstr information to middle of page

--- a/index.html
+++ b/index.html
@@ -74,17 +74,19 @@
         <p>All over the world people are having amazing trips. Millions of photos are being taken. With 
           all these beautiful sights and sounds, our plan is to see those
           photos get to 1 Trillion </p>
-        <p><a class="btn btn-danger btn-lg" href="#who" role="button">Sign up &raquo;</a></p>
+        <p><a class="btn btn-danger btn-lg" href="#who" role="button">Sign up</a></p>
          <div><i class="large material-icons"> TRYPSTR</i></div>
       </div>
     </div>
     
     <div id="who">
     <div class="container homepage">
-        <img src="images/academy_brand_med.png" alt="massive academy" title="massive academy">
-        <h2>WHO WE ARE</h2>
+        <img src="https://cdn.pixabay.com/photo/2015/07/29/00/08/photographer-865295_960_720.jpg" 
+        alt="taking photos" title="Adventure">
+        <h2>TRYPSTR</h2>
         <hr>
-        <P>We are<a href="#" target="_blank"> MASSIVE Academy.</a> We aim to improve education through both method - effective project-based learning - and material - by teaching skills that are applicable to improving your life today.</P>
+        <P>Trypstr<a href="#" target="_blank">.</a> We aim to show you all your photos according to location
+        and make them look stunning</P>
         
     </div>
     </div>
