add trypstr information for lower part of main content of page

--- a/index.html
+++ b/index.html
@@ -93,35 +93,36 @@
 
     <div id="get-involved">
     <div class="container homepage">
-     <h2> GET INVOLVED </h2>
+     <h2> WHAT TO EXPECT </h2>
      <hr>
       <div class="row">
         <div class="col-md-4">
         <span class="fa-stack fa-4x">
             <i class="fa fa-circle fa-stack-2x"></i>
-            <i class="fa fa-user fa-stack-1x fa-inverse"></i>
+            <i class="fa fa-camera-retro fa-stack-1x fa-inverse"></i>
         </span>
-    <h3>STUDENTS</h3>
-          <p>Want to learn English? Want to help us get to 1,000,000 lines? Click the button below and we'll let you know how to get involved.</p>
-           <p><a class="btn btn-default" href="grid.html" role="button">Start Learning &raquo;</a></p>
+    <h3>STUNNING PHOTOS</h3>
+          <p>Want to have beautiful photos? Want to see awesome sights and sounds from amazing places. Click the
+             button below and signup for free</p>
+           <p><a class="btn btn-default" href="#" role="button">Start taking &raquo;</a></p>
         </div>
         <div class="col-md-4">
         <span class="fa-stack fa-4x">
   <i class="fa fa-circle fa-stack-2x"></i>
-  <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
+  <i class="fa fa-map fa-stack-1x fa-inverse"></i>
 </span>
-          <h3>EDUCATORS</h3>
-          <p>Want to bring this initiative to your school or institution? Awesome! Click the button below and we'll make it happen.</p>
-          <p><a class="btn btn-default" href="http://www.google.com" target="_blank" role="button">Join the Initiative &raquo;</a></p>
+          <h3>LOCATION BASAED</h3>
+          <p>Want to show others how awesome where you are is? Awesome! Click the button below and we'll make it happen.</p>
+          <p><a class="btn btn-default" href="#" target="_blank" role="button">Join the fun &raquo;</a></p>
        </div>
         <div class="col-md-4">
         <span class="fa-stack fa-4x">
   <i class="fa fa-circle fa-stack-2x"></i>
-  <i class="fa fa-money fa-stack-1x fa-inverse"></i>
+  <i class="fa fa-comments fa-stack-1x fa-inverse"></i>
 </span>
-          <h3>SPONSORS</h3>
-          <p>We love all the support we get to help host more events, and empower more lives with the knowledge of english. Click to get involved.</p>
-       <p><a class="btn btn-default" href="https://docs.google.com/forms/d/1pG9YsCpR18geLOiaiN7FzGevC09sE2I-Qzy93mkIs7E/viewform" target="_blank" role="button">Give Support &raquo;</a></p>
+          <h3>COMMUNICATION</h3>
+          <p>Chat with your friends who are on here or make new ones</p>
+       <p><a class="btn btn-default" href="#" target="_blank" role="button">Start talking</a></p>
         </div>
       </div>
       </div> <!-- /container -->
