--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
       <footer>
       <div class="container">
-        <h3>ONE_MILLION LINES &copy; 2016</h3>
+        <h3>TRYPSTR &copy; 2018</h3>
         </div>
       </footer>
 
