change background image, remove uneccessary info and tweak image heights

--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
           all these beautiful sights and sounds, our plan is to see those
           photos get to 1 Trillion </p>
         <p><a class="btn btn-danger btn-lg" href="#who" role="button">Sign up</a></p>
-         <div><i class="large material-icons"> TRYPSTR</i></div>
+     
       </div>
     </div>
     
     <div id="who">
     <div class="container homepage">
-        <img src="https://cdn.pixabay.com/photo/2015/07/29/00/08/photographer-865295_960_720.jpg" 
+        <img class="img-responsive" src="https://cdn.pixabay.com/photo/2015/07/29/00/08/photographer-865295_960_720.jpg" 
         alt="taking photos" title="Adventure">
         <h2>TRYPSTR</h2>
         <hr>
