introduce flexbox to page to rearrange images and change bottom color to dodgerblue

--- a/index.html
+++ b/index.html
@@ -90,14 +90,18 @@
           <P>Trypstr<a href="#" target="_blank">.</a> We aim to show you all your photos according to location
             and make them look stunning
           </P>
-          <img class="img-responsive" src="https://cdn.pixabay.com/photo/2015/07/29/00/08/photographer-865295_960_720.jpg" 
-          alt="taking photos" title="Adventure">
-          <hr>
-          <div>
-            <iframe id="video" src="https://www.youtube.com/embed/MeTQplAmuTU" 
-            frameborder="0" allowfullscreen></iframe>
+          <div class="flex-container">
+            <div>
+              <img class="img-responsive" src="https://cdn.pixabay.com/photo/2015/07/29/00/08/photographer-865295_960_720.jpg" 
+              alt="taking photos" title="Adventure">
+            </div>
+            <div>
+              <iframe id="video" src="https://www.youtube.com/embed/MeTQplAmuTU" 
+              frameborder="0" allowfullscreen></iframe>
+            </div>
+            
           </div>
-          
+          <hr>
       </div>
     </div>
 
