rearrange height of iframe

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
           <form method="POST" action="https://www.freecodecamp.com/email-submit" id="form">
             <p> <input type="email" placeholder="Enter your email address" id="email" name="email"> </p>
-            <p><input type="submit" class="btn btn-danger btn-lg" role="button" value="Sign up"></p>
+            <p><input type="submit" id="submit" class="btn btn-danger btn-lg" role="button" value="Sign up"></p>
           </form>
       </div>
     </div>
@@ -101,7 +101,7 @@
             </div>
             
           </div>
-          <hr>
+          <br>
       </div>
     </div>
 
