add events page

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
               <li ><a href="#jumbotron" class="nav-link"> Sign up </a></li>
               <li ><a href="#who" class="nav-link">About</a></li>
               <li ><a href="#get-involved" class="nav-link"> Features</a></li>
+              <li ><a href="events-page/events.html" class="nav-link"> Events Page</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -76,7 +77,7 @@
           all these beautiful sights and sounds, our plan is to see those
           photos get to 1 Trillion. </p>
 
-          <form method="POST" action="https://www.freecodecamp.com/email-submit" id="form">
+          <form method="POST" action="" id="form">
             <p> <input type="email" placeholder="Enter your email address" id="email" name="email"> </p>
             <p><input type="submit" id="submit" class="btn btn-danger btn-lg" role="button" value="Sign up"></p>
           </form>
@@ -92,12 +93,11 @@
           </P>
           <div class="flex-container">
             <div>
-              <img class="img-responsive" src="https://cdn.pixabay.com/photo/2015/07/29/00/08/photographer-865295_960_720.jpg" 
+              <img class="img-responsive" src="https://www.popsci.com/uploads/2019/12/27/VUUFI7V7ZZAQZP3L6EHU7ATWZE.jpg?auto=webp&width=1440&height=1080" 
               alt="taking photos" title="Adventure">
             </div>
             <div>
-              <iframe id="video" src="https://www.youtube.com/embed/MeTQplAmuTU" 
-              frameborder="0" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/MeTQplAmuTU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             
           </div>
